environments/staging/image-updater/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: crud
          image: devops1600/crud-node:v0.10.0
          command: ["./start.sh"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 25
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 50
            periodSeconds: 5
