environments/staging/image-updater/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: test
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: crud-svc
  namespace: test
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
