environments/staging/image-updater/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: crud.1600.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-svc
            port:
              number: 80
